# Personal-Agent

starter-agent/: .env.example  .gitignore  README.md  WEB_FRONTEND_PLAN.md  design.md  pyproject.toml  task.md
starter-agent/.pytest-resume-escalated/test_application_auto_memory_r0/: agent.db
starter-agent/.pytest-resume-escalated/test_application_rejects_model0/: agent.db
starter-agent/.pytest-resume-escalated/test_approval_cannot_cross_ses0/: approval-email.db
starter-agent/.pytest-resume-escalated/test_approval_requires_explici0/: approval-email.db
starter-agent/.pytest-resume-escalated/test_auto_memory_never_overwri0/: auto-memory.db
starter-agent/.pytest-resume-escalated/test_auto_memory_rejects_exter0/: auto-memory.db
starter-agent/.pytest-resume-escalated/test_auto_memory_writes_ground0/: auto-memory.db
starter-agent/.pytest-resume-escalated/test_changed_draft_invalidates0/: approval-email.db
starter-agent/.session-only-311e6926-3084-42a9-b72d-5a136d49921c/: agent.db
starter-agent/config/: config.example.yaml  config.yaml
starter-agent/docs/: agent.md  architecture.md  context_token_plan.md  continuation.md  email_tool_acceptance.md  interview.md  job-research-design.md  job-research-implementation-audit.md  job-research-requirements.md  job-research-task.md  long_term_memory.md  product_canvas.md  proposal.md  rag-acceptance.md  rag-design.md  rag-final-validation.md  rag-requirements.md  rag-task.md  requirements.md  tool_acceptance.md  workflow.md
starter-agent/evals/: acceptance_cases.yaml
starter-agent/tests/: conftest.py
(+376 files in other folders)
