[project]
name = "starter-agent"
version = "0.1.0"
description = "A small, production-minded personal agent starter."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3,<5",
    "fastapi>=0.115.0,<1",
    "httpx>=0.28.0,<1",
    "openai>=1.60.0,<2",
    "pydantic>=2.10.0,<3",
    "pydantic-settings>=2.7.0,<3",
    "python-multipart>=0.0.20,<1",
    "pyyaml>=6.0.2,<7",
    "rich>=13.9.0,<15",
    "sqlalchemy>=2.0.36,<3",
    "structlog>=24.4.0,<26",
    "tzdata>=2025.2; platform_system == 'Windows'",
    "typer>=0.15.0,<1",
    "uvicorn>=0.34.0,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0,<9",
    "pytest-asyncio>=0.25.0,<1",
]

[project.scripts]
agent = "starter_agent.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/starter_agent"]

[tool.uv.extra-build-dependencies]
starter-agent = ["hatchling>=1.27.0"]

[tool.pytest.ini_options]
addopts = "-q"
asyncio_mode = "auto"
testpaths = ["tests"]
